# my-fit

./: pyproject.toml
app/: main.py  server.py
app/application/api/: __init__.py
app/application/api/meals/: __init__.py  routes.py
app/application/api/schemas/: meals.py
app/core/: models.py  repository.py  schema.py  unit_of_work.py
app/core/domain/: aggregates.py  entity.py  values.py
app/core/repository/: repository.py  sql.py
app/domain/: entities.py
app/infrastructure/: models.py
app/infrastructure/repository/sql/: meal.py
app/infrastructure/unit_of_work/: sql.py
