[tool.poetry]
name = "my-fit"
version = "0.0.1"
description = ""
authors = ["Alexander Walther <asushofman@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
attrs = ">=25.2.0"
fastapi = "0.116.1"
uvicorn = {extras = ["standard"], version = "^0.35.0"}
pydantic = "2.11.7"
pydantic-settings = "^2.10.1"
sqlalchemy = {version = "2.0.42", extras = ["mypy,asyncio"]}
orjson = "3.11.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
